--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "lint": "eslint --cache --fix .",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui",
     "test:tscheck": "tsc --noEmit",
     "pre-commit": "lint-staged",
-    "postinstall": "simple-git-hooks && nx build @vercube/nx",
+    "postinstall": "simple-git-hooks",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
@@ -32,32 +31,20 @@
   "devDependencies": {
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
-    "@nx/js": "21.0.3",
-    "@nx/plugin": "21.0.3",
     "@oxc-project/runtime": "0.69.0",
-    "@swc-node/register": "^1.10.10",
-    "@swc/core": "^1.11.24",
-    "@swc/helpers": "^0.5.17",
     "@types/node": "22.15.17",
     "@vitest/coverage-v8": "3.1.3",
     "@vitest/ui": "3.1.3",
     "eslint": "9.26.0",
     "eslint-config-unjs": "0.4.2",
-    "globals": "16.1.0",
     "lint-staged": "16.0.0",
-    "mermaid": "11.6.0",
-    "mitata": "1.0.34",
     "nx": "21.0.3",
-    "oxc-transform": "0.69.0",
-    "rolldown": "1.0.0-beta.8",
-    "sass-embedded": "^1.88.0",
     "simple-git-hooks": "2.13.0",
+    "tsdown": "0.11.7",
     "tslib": "2.8.1",
     "typescript": "5.8.3",
     "typescript-eslint": "8.32.1",
-    "unplugin-isolated-decl": "0.14.1",
     "vitepress": "1.6.3",
-    "vitepress-plugin-mermaid": "2.0.17",
     "vitest": "3.1.3"
   },
   "simple-git-hooks": {
