--- a/packages/storage/project.json
+++ b/packages/storage/project.json
@@ -4,10 +4,6 @@
   "projectType": "library",
   "sourceRoot": "{projectRoot}/src",
   "targets": {
-    "build": {
-      "executor": "@vercube/nx:rolldown",
-      "options": {
-      }
-    }
+    "build": {}
   }
 }
