--- a/playground/package.json
+++ b/playground/package.json
@@ -10,9 +10,7 @@
     "dev": "vercube dev"
   },
   "devDependencies": {
-    "@types/node": "^22.15.17",
-    "@vercube/cli": "workspace:*",
-    "tsx": "4.19.4"
+    "@vercube/cli": "workspace:*"
   },
   "dependencies": {
     "@vercube/auth": "workspace:*",
@@ -21,7 +19,6 @@
     "@vercube/h3": "workspace:*",
     "@vercube/logger": "workspace:*",
     "@vercube/storage": "workspace:*",
-    "h3": "npm:h3-nightly@2x",
     "tslib": "2.8.1",
     "zod": "3.24.4"
   }
