--- a/packages/di/package.json
+++ b/packages/di/package.json
@@ -6,8 +6,11 @@
   "repository": "@vercube/di",
   "license": "MIT",
   "sideEffects": false,
+  "main": "./dist/index.mjs",
+  "module": "./dist/index.mjs",
   "exports": {
-    ".": "./dist/index.mjs"
+    ".": "./dist/index.mjs",
+    "./package.json": "./package.json"
   },
   "types": "./dist/index.d.mts",
   "files": [
