--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -19,9 +19,11 @@
     "README.md"
   ],
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.842.0",
     "@vercube/di": "workspace:*",
     "@vercube/logger": "workspace:*"
+  },
+  "optionalDependencies": {
+    "@aws-sdk/client-s3": "3.842.0"
   },
   "publishConfig": {
     "access": "public"
