--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:tscheck": "tsc --noEmit",
+    "test:lint": "eslint .",
     "pre-commit": "lint-staged",
     "postinstall": "simple-git-hooks",
     "docs:dev": "vitepress dev docs",
