--- a/playground/package.json
+++ b/playground/package.json
@@ -19,6 +19,7 @@
     "@vercube/h3": "workspace:*",
     "@vercube/logger": "workspace:*",
     "@vercube/storage": "workspace:*",
+    "@vercube/ws": "workspace:*",
     "tslib": "2.8.1",
     "zod": "4.0.2"
   }
