refactor: fixed tests and vitest warning

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,6 +22,7 @@
     "@standard-schema/spec": "1.0.0",
     "@vercube/di": "workspace:*",
     "@vercube/logger": "workspace:*",
+    "@vercube/ws": "workspace:*",
     "c12": "3.0.4",
     "defu": "6.1.4",
     "pathe": "2.0.3",
