--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vercube-monorepo",
   "version": "0.0.0",
   "description": "An ultra-efficient JavaScript server framework that runs anywhere - Node.js, Bun, or Deno - with unmatched flexibility and complete configurability for developers who refuse to sacrifice speed or control.",
-  "packageManager": "pnpm@9.15.0",
+  "packageManager": "pnpm@10.13.1",
   "type": "module",
   "private": true,
   "engines": {
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "build": "nx run-many -t build --exclude=playground",
-    "dev": "nx watch --all -- nx run \\$NX_PROJECT_NAME:build",
+    "dev": "nx watch --all --exclude=playground -- nx run \\$NX_PROJECT_NAME:build",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:tscheck": "tsc --noEmit",
