--- a/packages/create-app/package.json
+++ b/packages/create-app/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.17",
   "description": "Create a Vercube app in seconds",
   "license": "MIT",
-  "repository": "@vercube/create-app",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vercube/vercube.git",
+    "directory": "packages/create-app"
+  },
   "main": "bin/create-vercube.js",
   "bin": {
     "create-vercube": "bin/create-vercube.js"
