--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,8 +2,12 @@
   "name": "@vercube/core",
   "version": "0.0.17",
   "description": "Core module for Vercube framework",
-  "packageManager": "pnpm@9.10.0",
-  "repository": "@vercube/core",
+  "packageManager": "pnpm@10.13.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vercube/vercube.git",
+    "directory": "packages/core"
+  },
   "license": "MIT",
   "sideEffects": false,
   "type": "module",
