--- a/packages/di/package.json
+++ b/packages/di/package.json
@@ -2,8 +2,12 @@
   "name": "@vercube/di",
   "version": "0.0.17",
   "description": "Dependencie Injection  module for Vercube framework",
-  "packageManager": "pnpm@9.10.0",
-  "repository": "@vercube/di",
+  "packageManager": "pnpm@10.13.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vercube/vercube.git",
+    "directory": "packages/di"
+  },
   "license": "MIT",
   "sideEffects": false,
   "main": "./dist/index.mjs",
