feat: add repository to npm

--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,9 +1,13 @@
 {
   "name": "@vercube/schema",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "description": "Schema (swagger) module for Vercube framework",
-  "packageManager": "pnpm@9.10.0",
-  "repository": "@vercube/schema",
+  "packageManager": "pnpm@10.13.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vercube/vercube.git",
+    "directory": "packages/schema"
+  },
   "license": "MIT",
   "sideEffects": false,
   "type": "module",
