--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lint-staged": "16.1.2",
     "nx": "21.3.1",
     "oxlint": "1.7.0",
+    "sass-embedded": "^1.89.2",
     "simple-git-hooks": "2.13.0",
     "tsdown": "0.12.9",
     "tslib": "2.8.1",
