--- a/playground/package.json
+++ b/playground/package.json
@@ -7,8 +7,10 @@
   "packageManager": "pnpm@10.13.1",
   "scripts": {
     "build": "vercube build",
+    "build:serverless": "vercube build --entry ./src/serverless.ts",
     "dev": "vercube dev",
-    "start": "node ./dist/index.mjs"
+    "start": "node ./dist/index.mjs",
+    "start:serverless": "serverless offline --stage local --noPrependStageInUrl --host 0.0.0.0"
   },
   "devDependencies": {
     "@vercube/cli": "workspace:*"
@@ -21,7 +23,10 @@
     "@vercube/logger": "workspace:*",
     "@vercube/schema": "workspace:*",
     "@vercube/storage": "workspace:*",
+    "@vercube/serverless": "workspace:*",
     "@vercube/ws": "workspace:*",
+    "serverless": "3",
+    "serverless-offline": "14.4.0",
     "tslib": "2.8.1",
     "zod": "4.0.17"
   }
