--- a/playground/package.json
+++ b/playground/package.json
@@ -22,10 +22,10 @@
     "@vercube/h3": "workspace:*",
     "@vercube/logger": "workspace:*",
     "@vercube/schema": "workspace:*",
-    "@vercube/storage": "workspace:*",
     "@vercube/serverless": "workspace:*",
+    "@vercube/storage": "workspace:*",
     "@vercube/ws": "workspace:*",
-    "serverless": "3",
+    "serverless": "^4.18.1",
     "serverless-offline": "14.4.0",
     "tslib": "2.8.1",
     "zod": "4.0.17"
