feat: add pre-push

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm pre-commit",
-    "commit-msg": "pnpm commitlint --edit $1"
+    "commit-msg": "pnpm commitlint --edit $1",
+    "pre-push": "pnpm test"
   }
 }
