feat: add verbatim module syntax

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "noEmit": false,
     "importHelpers": true,
     "skipLibCheck": true,
+    "verbatimModuleSyntax": true,
     "lib": ["dom", "es6", "es2017", "es2019", "ESNext"],
     "typeRoots": ["node_modules/@types"],
     "paths": {
