--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         run: pnpm build
  
       - name: Test
-        run: pnpm test
+        run: pnpm test --coverage
 
       - name: Lint
         run: pnpm test:lint
