--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Build
         run: pnpm build
  
-      - name: Test
-        run: pnpm test --coverage
+      - name: Test with coverage
+        run: pnpm vitest --coverage
 
       - name: Lint
         run: pnpm test:lint
