--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
     "@nx/js": "21.4.1",
-    "@oxc-project/runtime": "0.82.3",
+    "@oxc-project/runtime": "0.86.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "24.3.0",
     "@vitest/coverage-v8": "3.2.4",
@@ -44,9 +44,10 @@
     "changelogen": "0.6.2",
     "lint-staged": "16.1.5",
     "nx": "21.4.1",
-    "oxlint": "1.13.0",
+    "oxlint": "1.14.0",
     "prettier": "3.6.2",
-    "prettier-plugin-imports": "^4.3.3",
+    "prettier-plugin-imports": "4.3.3",
+    "renovate": "41.91.1",
     "simple-git-hooks": "2.13.1",
     "tsdown": "0.14.2",
     "tslib": "2.8.1",
