--- a/playground/package.json
+++ b/playground/package.json
@@ -25,9 +25,9 @@
     "@vercube/serverless": "workspace:*",
     "@vercube/storage": "workspace:*",
     "@vercube/ws": "workspace:*",
-    "serverless": "^4.18.2",
+    "serverless": "4.18.2",
     "serverless-offline": "14.4.0",
     "tslib": "2.8.1",
-    "zod": "4.1.3"
+    "zod": "4.1.5"
   }
 }
