--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -29,11 +29,11 @@
   ],
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "8.1.0",
-    "@standard-schema/spec": "1.0.0",
+    "@standard-schema/spec": "catalog:",
     "@vercube/core": "workspace:*",
     "@vercube/di": "workspace:*",
-    "defu": "6.1.4",
-    "zod": "4.1.5"
+    "defu": "catalog:",
+    "zod": "catalog:"
   },
   "publishConfig": {
     "access": "public"
