--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,17 +23,17 @@
     "README.md"
   ],
   "dependencies": {
-    "@standard-schema/spec": "1.0.0",
+    "@standard-schema/spec": "catalog:",
     "@vercube/di": "workspace:*",
     "@vercube/logger": "workspace:*",
     "c12": "3.2.0",
-    "defu": "6.1.4",
-    "pathe": "2.0.3",
+    "defu": "catalog:",
+    "pathe": "catalog:",
     "rou3": "0.7.3",
-    "srvx": "0.8.7"
+    "srvx": "catalog:"
   },
   "devDependencies": {
-    "zod": "4.1.5"
+    "zod": "catalog:"
   },
   "publishConfig": {
     "access": "public"
