--- a/packages/devkit/package.json
+++ b/packages/devkit/package.json
@@ -25,12 +25,12 @@
   "dependencies": {
     "@oxc-project/runtime": "0.86.0",
     "@vercube/core": "workspace:*",
-    "consola": "3.4.2",
+    "consola": "catalog:",
     "dotenv": "17.2.1",
     "hookable": "5.5.3",
     "oxc-parser": "0.86.0",
     "oxc-transform": "0.86.0",
-    "pathe": "2.0.3",
+    "pathe": "catalog:",
     "rolldown": "1.0.0-beta.34",
     "unplugin-isolated-decl": "0.15.1"
   },
