--- a/playground/package.json
+++ b/playground/package.json
@@ -28,6 +28,6 @@
     "serverless": "4.18.2",
     "serverless-offline": "14.4.0",
     "tslib": "2.8.1",
-    "zod": "4.1.5"
+    "zod": "catalog:"
   }
 }
