--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,11 @@
 packages:
-  - 'playground'
-  - 'packages/*'
+  - playground
+  - packages/*
+
+catalog:
+  '@standard-schema/spec': 1.0.0
+  consola: 3.4.2
+  defu: 6.1.4
+  pathe: 2.0.3
+  srvx: 0.8.7
+  zod: 4.1.5
