--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -12,12 +12,13 @@ jobs:
   autofix:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - run: npm i -fg corepack && corepack enable
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 24
           cache: "pnpm"
+      - run: pnpm -v 
       - run: pnpm install
       - run: pnpm lint:fix
       - uses: autofix-ci/action@551dded8c6cc8a1054039c8bc0b8b48c51dfc6ef
