--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Build
+        run: pnpm build
+
       - name: Run benchmarks
         uses: CodSpeedHQ/action@v3
         with:
