feat(rolldown): extend config with custom plugins, dts toggle and tsconfig path

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,7 +33,8 @@
     "srvx": "catalog:"
   },
   "devDependencies": {
-    "zod": "catalog:"
+    "zod": "catalog:",
+    "rolldown": "catalog:"
   },
   "publishConfig": {
     "access": "public"
