--- a/packages/devkit/package.json
+++ b/packages/devkit/package.json
@@ -31,7 +31,7 @@
     "oxc-parser": "0.89.0",
     "oxc-transform": "0.89.0",
     "pathe": "catalog:",
-    "rolldown": "1.0.0-beta.38",
+    "rolldown": "catalog:",
     "unplugin-isolated-decl": "0.15.2"
   },
   "publishConfig": {
