--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,6 +8,19 @@ catalog:
   consola: 3.4.2
   defu: 6.1.4
   pathe: 2.0.3
-  rolldown: 1.0.0-beta.41
-  srvx: 0.8.9
-  zod: 4.1.11
+  rolldown: 1.0.0-beta.42
+  srvx: 0.8.15
+  zod: 4.1.12
+
+ignoredBuiltDependencies:
+  - better-sqlite3
+  - core-js-pure
+  - dtrace-provider
+  - esbuild
+  - protobufjs
+  - re2
+  - serverless
+
+onlyBuiltDependencies:
+  - nx
+  - simple-git-hooks
