--- a/nx.json
+++ b/nx.json
@@ -6,7 +6,7 @@
   "parallel": 4,
   "packageManager": "pnpm",
   "release": {
-    "projects": ["*", "!playground", "!@vercube/nx"],
+    "projects": ["*", "!playground", "!@examples/*"],
     "git": {
       "commitMessage": "chore: release v{version} [no ci]"
     },
