--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:bench": "vitest bench --run",
-    "test:tscheck": "tsc --noEmit",
+    "test:tscheck": "tsgo --noEmit",
     "test:lint": "oxlint . && prettier --check .",
     "lint:fix": "oxlint --fix . && prettier --write .",
     "pre-commit": "lint-staged",
@@ -41,6 +41,7 @@
     "@oxc-project/runtime": "0.94.0",
     "@trivago/prettier-plugin-sort-imports": "5.2.2",
     "@types/node": "24.7.2",
+    "@typescript/native-preview": "7.0.0-dev.20251030.1",
     "@vitest/coverage-v8": "3.2.4",
     "@vitest/ui": "3.2.4",
     "changelogen": "0.6.2",
@@ -53,7 +54,6 @@
     "simple-git-hooks": "2.13.1",
     "tsdown": "0.15.6",
     "tslib": "2.8.1",
-    "typescript": "5.9.3",
     "vitepress": "1.6.4",
     "vitest": "3.2.4"
   },
