--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@vercube/auth",
+  "name": "@vercube/mcp",
   "version": "0.0.26",
-  "description": "Auth module for Vercube framework",
+  "description": "Model Context Protocol integration for the Vercube framework",
   "packageManager": "pnpm@10.20.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/vercube/vercube.git",
-    "directory": "packages/auth"
+    "directory": "packages/mcp"
   },
   "license": "MIT",
   "sideEffects": false,
@@ -22,10 +22,18 @@
     "dist",
     "README.md"
   ],
+  "keywords": [
+    "vercube",
+    "mcp",
+    "model-context-protocol"
+  ],
   "dependencies": {
+    "@modelcontextprotocol/sdk": "1.20.2",
     "@vercube/core": "workspace:*",
     "@vercube/di": "workspace:*",
-    "@vercube/logger": "workspace:*"
+    "@vercube/logger": "workspace:*",
+    "mcp-handler": "1.0.3",
+    "zod": "catalog:"
   },
   "publishConfig": {
     "access": "public"
