feat: add mcp package (#581)
feat: add mcp package

--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "@vercube/di",
+  "name": "@vercube/mcp",
   "version": "0.0.26",
-  "description": "Dependency Injection  module for Vercube framework",
+  "description": "Model Context Protocol integration for the Vercube framework",
   "packageManager": "pnpm@10.20.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/vercube/vercube.git",
-    "directory": "packages/di"
+    "directory": "packages/mcp"
   },
   "license": "MIT",
   "sideEffects": false,
+  "type": "module",
   "main": "./dist/index.mjs",
   "module": "./dist/index.mjs",
   "exports": {
@@ -21,6 +22,19 @@
     "dist",
     "README.md"
   ],
+  "keywords": [
+    "vercube",
+    "mcp",
+    "model-context-protocol"
+  ],
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "1.20.2",
+    "@vercube/core": "workspace:*",
+    "@vercube/di": "workspace:*",
+    "@vercube/logger": "workspace:*",
+    "mcp-handler": "1.0.3",
+    "zod": "catalog:"
+  },
   "publishConfig": {
     "access": "public"
   }
