--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,10 +26,10 @@
     "@standard-schema/spec": "catalog:",
     "@vercube/di": "workspace:*",
     "@vercube/logger": "workspace:*",
-    "c12": "3.3.1",
+    "c12": "catalog:",
     "defu": "catalog:",
     "pathe": "catalog:",
-    "rou3": "0.7.9",
+    "rou3": "0.7.10",
     "srvx": "catalog:"
   },
   "devDependencies": {
