--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,10 @@
       "@vercube/*": ["./packages/*/src"]
     }
   },
-  "include": ["./packages/**/*.ts"],
+  "include": [
+    "./packages/**/*.ts",
+    "./scripts/**/*.ts",
+    "./tsdown.config.ts"
+  ],
   "exclude": ["node_modules"]
 }
