--- a/package.json
+++ b/package.json
@@ -34,19 +34,19 @@
     "@commitlint/cli": "20.3.0",
     "@commitlint/config-conventional": "20.3.0",
     "@nx/js": "22.3.3",
-    "@oxc-project/runtime": "0.106.0",
+    "@oxc-project/runtime": "0.107.0",
     "@types/node": "25.0.3",
-    "@typescript/native-preview": "7.0.0-dev.20260104.1",
+    "@typescript/native-preview": "7.0.0-dev.20260107.1",
     "@vitest/coverage-v8": "4.0.16",
     "@vitest/ui": "4.0.16",
     "changelogen": "0.6.2",
     "lint-staged": "16.2.7",
     "nx": "22.3.3",
-    "oxfmt": "^0.21.0",
-    "oxlint": "1.36.0",
-    "renovate": "42.71.0",
+    "oxfmt": "0.21.0",
+    "oxlint": "1.38.0",
+    "renovate": "42.74.2",
     "simple-git-hooks": "2.13.1",
-    "tsdown": "0.18.4",
+    "tsdown": "0.19.0-beta.5",
     "tslib": "2.8.1",
     "vitest": "4.0.16"
   },
