--- a/package.json
+++ b/package.json
@@ -34,19 +34,19 @@
     "@commitlint/cli": "20.3.1",
     "@commitlint/config-conventional": "20.3.1",
     "@nx/js": "22.3.3",
-    "@oxc-project/runtime": "0.108.0",
+    "@oxc-project/runtime": "catalog:",
     "@types/node": "25.0.9",
-    "@typescript/native-preview": "7.0.0-dev.20260118.1",
+    "@typescript/native-preview": "7.0.0-dev.20260119.1",
     "@vitest/coverage-v8": "4.0.17",
     "@vitest/ui": "4.0.17",
     "changelogen": "0.6.2",
     "lint-staged": "16.2.7",
     "nx": "22.3.3",
-    "oxfmt": "0.24.0",
-    "oxlint": "1.39.0",
-    "renovate": "42.84.2",
+    "oxfmt": "0.26.0",
+    "oxlint": "1.41.0",
+    "renovate": "42.85.4",
     "simple-git-hooks": "2.13.1",
-    "tsdown": "0.19.0",
+    "tsdown": "0.20.0-beta.3",
     "tslib": "2.8.1",
     "vitest": "4.0.17"
   },
