--- a/package.json
+++ b/package.json
@@ -33,22 +33,22 @@
     "@codspeed/vitest-plugin": "5.0.1",
     "@commitlint/cli": "20.3.1",
     "@commitlint/config-conventional": "20.3.1",
-    "@nx/js": "22.4.0",
+    "@nx/js": "22.4.1",
     "@oxc-project/runtime": "catalog:",
     "@types/node": "25.0.10",
-    "@typescript/native-preview": "7.0.0-dev.20260122.2",
-    "@vitest/coverage-v8": "4.0.17",
-    "@vitest/ui": "4.0.17",
+    "@typescript/native-preview": "7.0.0-dev.20260124.1",
+    "@vitest/coverage-v8": "4.0.18",
+    "@vitest/ui": "4.0.18",
     "changelogen": "0.6.2",
     "lint-staged": "16.2.7",
-    "nx": "22.4.0",
+    "nx": "22.4.1",
     "oxfmt": "0.26.0",
     "oxlint": "1.41.0",
-    "renovate": "42.88.2",
+    "renovate": "42.92.4",
     "simple-git-hooks": "2.13.1",
-    "tsdown": "0.20.0-beta.4",
+    "tsdown": "0.20.1",
     "tslib": "2.8.1",
-    "vitest": "4.0.17"
+    "vitest": "4.0.18"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm pre-commit",
