--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -1,25 +1,11 @@
-name: autofix.ci # needed to securely identify the workflow
+name: autofix.ci
 
-on:
-  pull_request:
-  push:
-    branches: ["main"]
-
-permissions:
-  contents: read
+on: [pull_request]
 
 jobs:
   autofix:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
-      - run: npm i -fg corepack && corepack enable
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 24
-          cache: "pnpm"
-      - run: pnpm install
-      - run: pnpm lint:fix
-      - uses: autofix-ci/action@551dded8c6cc8a1054039c8bc0b8b48c51dfc6ef
-        with:
-          commit-message: "chore: apply automated updates"
+    uses: sxzz/workflows/.github/workflows/autofix.yml@v1
+    with:
+      command: pnpm lint:fix && pnpm build
+    permissions:
+      contents: read
