--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,76 +1,16 @@
 name: Release
 
 on:
-  workflow_dispatch:
-    inputs:
-      version:
-        type: choice
-        description: Select version
-        required: true
-        options:
-          - patch
-          - minor
-          - major
-          - alpha
-      alphaTag:
-        type: string
-        description: 'Alpha tag (required only if `alpha`)'
-        required: false
+  push:
+    tags:
+      - 'v*'
 
 jobs:
   release:
-    runs-on: ubuntu-latest
+    uses: sxzz/workflows/.github/workflows/release.yml@v1
+    with:
+      publish: true
+      build: pnpm build
     permissions:
       contents: write
-      pull-requests: write
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - uses: pnpm/action-setup@v3
-        with:
-          version: 10
-
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-          cache: 'pnpm'
-
-      - name: Setup environment
-        run: |
-          pnpm config set "//registry.npmjs.org/:_authToken=${NPM_TOKEN}"
-          git config --global user.email "release@vercube.dev"
-          git config --global user.name "Vercube-CI"
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Test
-        run: pnpm build && pnpm test
-
-      - name: Release (alpha)
-        if: inputs.version == 'alpha'
-        run: |
-          if [ -z "${{ inputs.alphaTag }}" ]; then
-            echo "❌ Alpha tag is required"
-            exit 1
-          fi
-          pnpm nx release prerelease --preid=${{ inputs.alphaTag }} --verbose --first-release --yes
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
-
-      - name: NX Release (stable)
-        if: inputs.version != 'alpha'
-        run: pnpm nx release ${{ inputs.version }} --verbose --first-release --yes
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
-
-      - name: Push tags and changes
-        run: git push --follow-tags origin main
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
+      id-token: write
