--- a/packages/di/package.json
+++ b/packages/di/package.json
@@ -21,6 +21,9 @@
     "dist",
     "README.md"
   ],
+  "scripts": {
+    "build": "tsdown --config ../../tsdown.config.ts --config-loader=unrun"
+  },
   "publishConfig": {
     "access": "public"
   }
