--- a/packages/devkit/package.json
+++ b/packages/devkit/package.json
@@ -22,6 +22,9 @@
     "dist",
     "README.md"
   ],
+  "scripts": {
+    "build": "tsdown --config ../../tsdown.config.ts --config-loader=unrun"
+  },
   "dependencies": {
     "@oxc-project/runtime": "catalog:",
     "@vercube/core": "workspace:*",
