--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -27,6 +27,9 @@
     "mcp",
     "model-context-protocol"
   ],
+  "scripts": {
+    "build": "tsdown --config ../../tsdown.config.ts --config-loader=unrun"
+  },
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.25.3",
     "@vercube/auth": "workspace:*",
