--- a/playground/package.json
+++ b/playground/package.json
@@ -10,7 +10,8 @@
     "build:serverless": "vercube build --entry ./src/serverless.ts",
     "dev": "vercube dev",
     "start": "node ./dist/index.mjs",
-    "start:serverless": "serverless offline --stage local --noPrependStageInUrl --host 0.0.0.0"
+    "start:serverless": "serverless offline --stage local --noPrependStageInUrl --host 0.0.0.0",
+    "vercube:fetch": "vercube fetch"
   },
   "devDependencies": {
     "@vercube/cli": "workspace:*"
