--- a/examples/azure-functions/package.json
+++ b/examples/azure-functions/package.json
@@ -17,6 +17,7 @@
     "@vercube/cli": "workspace:*",
     "@vercube/core": "workspace:*",
     "@vercube/di": "workspace:*",
+    "@vercube/logger": "workspace:*",
     "@vercube/serverless": "workspace:*",
     "azure-functions-core-tools": "4.x"
   }
