--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@vercube/devkit": "workspace:*",
+    "@vercube/logger": "workspace:*",
     "citty": "0.2.0",
     "consola": "catalog:",
     "giget": "3.1.1",
