--- a/package.json
+++ b/package.json
@@ -51,6 +51,6 @@
   "simple-git-hooks": {
     "pre-commit": "pnpm pre-commit",
     "commit-msg": "pnpm commitlint --edit $1",
-    "pre-push": "pnpm test"
+    "pre-push": "pnpm test && pnpm test:tscheck"
   }
 }
