--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "turbo run build --filter='./packages/*'",
     "dev": "turbo watch build --filter='./packages/*'",
     "test": "vitest run",
+    "test:all": "pnpm test && pnpm test:tscheck && pnpm test:lint",
     "test:coverage": "vitest run --coverage",
     "test:bench": "vitest bench --run",
     "test:tscheck": "tsgo --noEmit",
@@ -29,23 +30,23 @@
     ]
   },
   "devDependencies": {
-    "@codspeed/vitest-plugin": "5.0.1",
+    "@codspeed/vitest-plugin": "5.1.0",
     "@commitlint/cli": "20.4.1",
     "@commitlint/config-conventional": "20.4.1",
     "@oxc-project/runtime": "catalog:",
     "@types/node": "25.2.0",
-    "@typescript/native-preview": "7.0.0-dev.20260203.1",
+    "@typescript/native-preview": "7.0.0-dev.20260204.1",
     "@vitest/coverage-v8": "4.0.18",
     "@vitest/ui": "4.0.18",
     "bumpp": "10.4.0",
     "lint-staged": "16.2.7",
-    "turbo": "^2.5.0",
     "oxfmt": "0.28.0",
     "oxlint": "1.43.0",
-    "renovate": "43.2.3",
+    "renovate": "43.3.1",
     "simple-git-hooks": "2.13.1",
     "tsdown": "0.20.1",
     "tslib": "2.8.1",
+    "turbo": "^2.8.3",
     "vitest": "4.0.18"
   },
   "simple-git-hooks": {
