--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -10,8 +10,8 @@ catalog:
   consola: 3.4.2
   defu: 6.1.4
   pathe: 2.0.3
-  rolldown: 1.0.0-rc.2
-  srvx: npm:srvx-nightly
+  rolldown: 1.0.0-rc.3
+  srvx: 0.11.0
   zod: 4.3.6
 
 ignoredBuiltDependencies:
