--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,7 +6,7 @@ packages:
 catalog:
   '@oxc-project/runtime': 0.112.0
   '@standard-schema/spec': 1.1.0
-  c12: 3.3.3
+  c12: 4.0.0-beta.2
   consola: 3.4.2
   defu: 6.1.4
   pathe: 2.0.3
