--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "build": "turbo run build --filter='./packages/*'",
     "dev": "turbo watch build --filter='./packages/*'",
     "test": "vitest run",
+    "test:playground": "vitest run --config playground/vitest.config.ts",
+    "test:playground:types": "tsc -p playground/tsconfig.tests.json --noEmit",
+    "test:playground:bench": "vitest bench --config playground/vitest.bench.config.ts",
     "test:coverage": "vitest run --coverage",
     "test:bench": "vitest bench --run",
     "test:tscheck": "tsgo --noEmit",
